langtools/test/tools/javac/LocalClasses_2.out
LocalClasses_2.java:15:13: compiler.err.already.defined: Local, foo()
1 error
